--- a/src/components/email-editor/EmailEditor.module.scss
+++ b/src/components/email-editor/EmailEditor.module.scss
@@ -7,6 +7,12 @@
   .editor {
     padding: 1.2rem;
     padding-bottom: 2rem;
+    display: block;
+    width: calc(100% - 2.4rem);
+    min-height: 160px;
+    border: none;
+    outline: none;
+    resize: none;
   }
 }
 .actions {
