add backend and tanstackQuery

--- a/src/components/email-editor/EmailEditor.module.scss
+++ b/src/components/email-editor/EmailEditor.module.scss
@@ -59,6 +59,14 @@
   }
 }
 
-.read-the-docs {
-  color: #888;
+.font-bold {
+  font-weight: bold;
+}
+
+.font-italic {
+  font-style: italic;
+}
+
+.font-underline {
+  text-decoration: underline;
 }
